--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -84,10 +84,11 @@
                                 <span class="nav-link-text">Profile</span>
                             </a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link" href="examples/tables.html">
+                            <a class="nav-link" >
                                 <i class="ni ni-bullet-list-67 text-default"></i>
-                                  <span class="nav-link-text">Tables</span>                               
+                                  <span class="nav-link-text">Tables</span>                              
                             </a>
                         </li>
                         <li class="nav-item">
