--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<MyUser>
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_DashBoard.cshtml";
 }
@@ -44,7 +45,8 @@
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
                 <a class="navbar-brand" href="javascript:void(0)">
-                    <img src="~/Argon-assets/img/brand/blue.png" class="navbar-brand-img" alt="...">
+                    <a asp-controller="Home" asp-action="Index" type="button">Nithin</a>
+                    @*<img src="~/Argon-assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
                 </a>
             </div>
             <div class="navbar-inner">
@@ -53,9 +55,9 @@
                     <!-- Nav items -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="dashboard.html">
+                            <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
                                 <i class="ni ni-tv-2 text-primary"></i>
-                                <span class="nav-link-text">Dashboard</span>
+                                <span class="nav-link-text">My Dashboard</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -423,39 +425,45 @@
                                 <thead class="thead-light">
                                     <tr>
                                         <th>User Name</th>
-                                        <th>Password</th>                                        
-                                        <th>Mobile</th>
+                                        <th>Age</th>                                        
+                                        <th> User Status</th>
                                         <th>City</th>                               
                                         <th>Account Balance</th>
-                                        <th>User Status</th>
-                                        <th>Admin</th>
-                                        <th>User Email</th>
+                                        
+                                       
+                                        
                                     </tr>
                                 </thead>
+                                @foreach(var users in Model)
+                                {
+                                    @*<tr>@users.Username</tr>*@
+                                
+
                                 
                             <tbody class="list">
                                     <tr>
                                         <th scope="row">
                                             <div class="media align-items-center">
-                                                <a href="#" class="avatar rounded-circle mr-3">
-                                                    <img alt="Image placeholder" src="~/Argon-assets/img/theme/bootstrap.jpg">
-                                                </a>
+                                                
                                                 <div class="media-body">
-                                                    <span class="name mb-0 text-sm">Argon Design System</span>
+                                                        <span class="name mb-0 text-sm">@users.Username</span>
                                                 </div>
                                             </div>
                                         </th>
                                         <td class="budget">
-                                            $2500 USD
+                                                @{
+                                                    int age = DateTime.Now.Year - users.Age.Year;
+                                                }
+                                                @age years
                                         </td>
                                         <td>
                                             <span class="badge badge-dot mr-4">
                                                 <i class="bg-warning"></i>
-                                                <span class="status">pending</span>
+                                                    <span class="status">@users.UserStatus</span>
                                             </span>
                                         </td>
                                         <td>
-                                            <div class="avatar-group">
+                                            @*<div class="avatar-group">
                                                 <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Ryan Tompson">
                                                     <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-1.jpg">
                                                 </a>
@@ -468,20 +476,17 @@
                                                 <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Jessica Doe">
                                                     <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-4.jpg">
                                                 </a>
-                                            </div>
+                                            </div>*@
+                                            @users.City
                                         </td>
                                         <td>
-                                            <div class="d-flex align-items-center">
-                                                <span class="completion mr-2">60%</span>
-                                                <div>
-                                                    <div class="progress">
-                                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                                    </div>
-                                                </div>
+                                                <div class=" ni ni-money-coins">
+                                                    <span class="">@users.AccountBalance</span>
+                                                
                                             </div>
                                         </td>
-                                        <td class="text-right">
-                                            <div class="dropdown">
+                                       
+                                            @*<div class="dropdown">
                                                 <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="fas fa-ellipsis-v"></i>
                                                 </a>
@@ -490,10 +495,13 @@
                                                     <a class="dropdown-item" href="#">Another action</a>
                                                     <a class="dropdown-item" href="#">Something else here</a>
                                                 </div>
-                                            </div>
-                                        </td>
+                                            </div>*@
+                                            
+                                        
+                                            <td><div class="btn"> <a asp-controller="Users" asp-action="EditDetails" asp-route-Username="@users.Username">Edit</a></div></td>
+                                            <td><div class="btn"> <a asp-controller="Users" asp-action="deleteDetails" asp-route-Username="@users.Username">Delete</a></div></td>
                                     </tr>
-                                    <tr>
+                                    @*<tr>
                                         <th scope="row">
                                             <div class="media align-items-center">
                                                 <a href="#" class="avatar rounded-circle mr-3">
@@ -728,11 +736,12 @@
                                                 </div>
                                             </div>
                                         </td>
-                                    </tr>
+                                    </tr>*@
                                 </tbody>
+                                }
                             </table>
                         </div>
-                        <!-- Card footer -->
+                        @*<!-- Card footer -->
                         <div class="card-footer py-4">
                             <nav aria-label="...">
                                 <ul class="pagination justify-content-end mb-0">
@@ -757,7 +766,7 @@
                                     </li>
                                 </ul>
                             </nav>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -1087,14 +1096,14 @@
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
                         <div class="copyright text-center  text-lg-left  text-muted">
-                            &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
+                            &copy; 2020 <a href="" class="font-weight-bold ml-1" target="_blank">Nithin</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                             <li class="nav-item">
-                                <a href="https://www.creative-tim.com" class="nav-link" target="_blank">Creative Tim</a>
-                            </li>
+                                <a href="" class="nav-link" target="_blank">Nithin</a>
+                            @*</li>
                             <li class="nav-item">
                                 <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
                             </li>
@@ -1103,7 +1112,7 @@
                             </li>
                             <li class="nav-item">
                                 <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
-                            </li>
+                            </li>*@
                         </ul>
                     </div>
                 </div>
