--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -54,7 +54,7 @@
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
                 <a class="navbar-brand" href="javascript:void(0)">
-                    <a asp-controller="Home" asp-action="Index"  type="button">Nithin</a>
+                    <a asp-controller="Home" asp-action="Index" type="button">Nithin</a>
                     @*<img src="~/Argon-assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
                 </a>
             </div>
@@ -63,13 +63,26 @@
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
                     <ul class="navbar-nav">
+                        @*<li class="nav-item">
+                        <a asp-controller="DashBoard" asp-action="TransferMoney" class="btn btn-primary my-4" type="button">Transfer Money</a>
+                        </li>*@
+                        
                         <li class="nav-item">
-                            <a asp-controller="DashBoard" asp-action="TransferMoney" class="btn btn-primary my-4" type="button">Transfer Money</a>
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
+                                <i class=""></i>
+                                <span class="nav-link-text">Transfer Money</span>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="examples/icons.html">
-                                <i class="ni ni-planet text-orange"></i>
-                                <span class="nav-link-text">Icons</span>
+                            <a class="nav-link" asp-controller="DashBoard" asp-action="MoneyRequest">
+                                <i class=""></i>
+                                <span class="nav-link-text">Money Request</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="examples/dashboard.html">
+                                <i class="ni ni-tv-2 text-primary"></i>
+                                <span class="nav-link-text">Dashboard</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -84,11 +97,11 @@
                                 <span class="nav-link-text">Profile</span>
                             </a>
                         </li>
-                        
+
                         <li class="nav-item">
-                            <a class="nav-link" >
+                            <a class="nav-link">
                                 <i class="ni ni-bullet-list-67 text-default"></i>
-                                  <span class="nav-link-text">Tables</span>                              
+                                <span class="nav-link-text">Tables</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -152,15 +165,11 @@
                 </div>
             </div>
         </div>
-       
-    </nav> 
-    
-        
-
+    </nav>
     <!-- Main content -->
     <div class="main-content" id="panel">
         <!-- Topnav -->
-        <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+        @* <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <!-- Search form -->
@@ -397,7 +406,7 @@
                 </div>
 
             </div>
-        </nav>
+        </nav>*@
         <!-- Header -->
         <!-- Header -->
         <div class="header bg-primary pb-6">
@@ -514,9 +523,9 @@
                 </div>
         </div>
     </div>
-           
-        
-        <!-- Page content -->
+   
+
+    <!-- Page content -->
         <div class="container-fluid mt--6">
             <div class="row">
                 <div class="col-xl-8">
