--- a/Nithin2003/Views/Shared/_Layout.cshtml
+++ b/Nithin2003/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  @*<meta charset="utf-8" />
+    @*<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Nithin2003</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -42,131 +42,152 @@
     ======================================================== -->
 </head>
 <body>
-   @* <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Nithin2003</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+    @* <header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <div class="container-fluid">
+    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Nithin2003</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+    <ul class="navbar-nav flex-grow-1">
+    <li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">@Context.Session.GetString("Username")</a>
-                        </li>
-                        @if(Context.Session.GetString("SignIn") == "True")
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="SignOut">Sign Out</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li align="right" class="nav-item">
-                                <a  class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="SignIn">Sign In</a>
-                            </li>
-                        }
-                        
-                       
+    <li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">@Context.Session.GetString("Username")</a>
+    </li>
+    @if(Context.Session.GetString("SignIn") == "True")
+    {
+    <li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="SignOut">Sign Out</a>
+    </li>
+    }
+    else
+    {
+    <li align="right" class="nav-item">
+    <a  class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="SignIn">Sign In</a>
+    </li>
+    }
 
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+
+    </ul>
+    </div>
+    </div>
+    </nav>
     </header>*@
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
-               @* <img src="~/flex-assets/img/logo.png" alt="">*@
+            <a href="#hero" class="logo d-flex align-items-center">
+                @* <img src="~/flex-assets/img/logo.png" alt="">*@
                 <span>Nithin</span>
             </a>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    @if (Context.Session.GetString("SignIn") == "True")
-                    {
-                        <li style="float:left;width:400px;height: 60px;"><a class="nav-link scrollto active" asp-controller="Dashboard" asp-action="Index">Dashboard </a></li>                       
+                    @if (Context.Session.GetString("SignIn") == "true")
+                    {                                  
+                            <li style="float:left;width:400px;height: 60px;"><a class="nav-link scrollto active" asp-controller="Dashboard" asp-action="Index">Dashboard </a></li>
                     }
                     else
-                    {                         
+                    {
                         <li style="float:left;width:400px;height: 60px;"><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    }                                  
+                    }
+                    @if (Context.Session.GetString("Admin") == "True")
+                    {
+                        <li>
+                            <a class="nav-link scrollto" asp-controller="Admin" asp-action="Index">Admin</a>
+                        </li>
+                    }
+                    
 
-                    <li><a class="nav-link scrollto" >          </a></li>
-                    <li><a class="nav-link scrollto" >         </a></li>
-                    <li><a class="nav-link scrollto" >          </a></li>
+
+                    <li><a class="nav-link scrollto">          </a></li>
+                    <li><a class="nav-link scrollto">         </a></li>
+                    <li><a class="nav-link scrollto">          </a></li>
                     <li><a href="">        </a></li>
                     <li class="">
-                        <a ><span>      </span> <i class=""></i></a>
+                        <a><span>      </span> <i class=""></i></a>
                         @*<ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown">
-                                <a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a >Deep Drop Down 1</a></li>
-                                    <li><a >Deep Drop Down 2</a></li>
-                                    <li><a >Deep Drop Down 3</a></li>
-                                    <li><a >Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
+                        <li><a href="#">Drop Down 1</a></li>
+                        <li class="dropdown">
+                        <a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                        <ul>
+                        <li><a >Deep Drop Down 1</a></li>
+                        <li><a >Deep Drop Down 2</a></li>
+                        <li><a >Deep Drop Down 3</a></li>
+                        <li><a >Deep Drop Down 4</a></li>
+                        <li><a href="#">Deep Drop Down 5</a></li>
+                        </ul>
+                        </li>
+                        <li><a href="#">Drop Down 2</a></li>
+                        <li><a href="#">Drop Down 3</a></li>
+                        <li><a href="#">Drop Down 4</a></li>
                         </ul>*@
                     </li>
 
                     <li class="">
-                        <a ><span></span> <i class=""></i>       </a>
-                       @* <ul>
-                            <li>
-                                <a href="#">Column 1 link 1</a>
-                                <a href="#">Column 1 link 2</a>
-                                <a href="#">Column 1 link 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Column 2 link 1</a>
-                                <a href="#">Column 2 link 2</a>
-                                <a href="#">Column 3 link 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Column 3 link 1</a>
-                                <a href="#">Column 3 link 2</a>
-                                <a href="#">Column 3 link 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Column 4 link 1</a>
-                                <a href="#">Column 4 link 2</a>
-                                <a href="#">Column 4 link 3</a>
-                            </li>
+                        <a><span></span> <i class=""></i>       </a>
+                        @* <ul>
+                        <li>
+                        <a href="#">Column 1 link 1</a>
+                        <a href="#">Column 1 link 2</a>
+                        <a href="#">Column 1 link 3</a>
+                        </li>
+                        <li>
+                        <a href="#">Column 2 link 1</a>
+                        <a href="#">Column 2 link 2</a>
+                        <a href="#">Column 3 link 3</a>
+                        </li>
+                        <li>
+                        <a href="#">Column 3 link 1</a>
+                        <a href="#">Column 3 link 2</a>
+                        <a href="#">Column 3 link 3</a>
+                        </li>
+                        <li>
+                        <a href="#">Column 4 link 1</a>
+                        <a href="#">Column 4 link 2</a>
+                        <a href="#">Column 4 link 3</a>
+                        </li>
                         </ul>
-                    </li>*@
+                        </li>*@
 
-                    
-                    <li><a class="nav-link scrollto" asp-controller="Users" asp-action="SignIn">@Context.Session.GetString("Username")</a></li>
-                    
-                    @if (Context.Session.GetString("SignIn") == "True")
-                    {
+                        @*
+                        <li><a class="nav-link scrollto" asp-controller="Users" asp-action="SignIn">@Context.Session.GetString("Username")</a></li>*@
+
+                        @if (Context.Session.GetString("SignIn") == "True")
+                        {
+                            if (Context.Session.GetString("Admin") == "True")
+                            {
+                            <li>
+                                <a class="nav-link scrollto" asp-controller="Admin" asp-action="Index">@Context.Session.GetString("Username")</a>
+                            </li>
+                            }
+                            else
+                            {
+                            <li>
+                                <a class="nav-link scrollto" asp-controller="Dashboard" asp-action="Index">@Context.Session.GetString("Username")</a>
+                            </li>
+                            }
+                            
                         <li>
                             <a class="getstarted scrollto" asp-area="" asp-controller="Users" asp-action="SignOut">Sign Out</a>
                         </li>
-                    }
-                    else
-                    {
-                        <li >
+                        }
+                        else
+                        {
+                        <li>
                             <a class="getstarted scrollto" asp-area="" asp-controller="Users" asp-action="SignIn">Sign In</a>
                         </li>
-                    }
+                        }
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -179,11 +200,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Nithin2003 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    @*<footer class="border-top footer text-muted">
+    <div class="container">
+    &copy; 2024 - Nithin2003 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
+    </footer>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
