--- a/Nithin2003/Views/Users/AddDetails.cshtml
+++ b/Nithin2003/Views/Users/AddDetails.cshtml
@@ -241,7 +241,9 @@
                                
                                 <div class="text-center">                                    
                                     <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Sign Up" />
-                                    <a asp-controller="Users" asp-action="SignIn" class="btn btn-primary my-4" type="button">Back To Home</a>
+                                    <a asp-controller="Home" asp-action="Index" class="btn btn-primary my-4" type="button">Back To Home</a>
+                                    <h5 class="text-Black">Have An Account ? Click On Sign In</h5>
+                                    <a asp-controller="Users" asp-action="SignIn" class="btn btn-primary my-4" type="button">Sign In</a>
                                 </div>
                             </form>
                         </div>
@@ -278,7 +280,7 @@
             </div>
         </div>
     </footer>*@
-    <!-- Argon Scripts -->
+    @*<!-- Argon Scripts -->
     <!-- Core -->
     <script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
     <script src="../assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -286,7 +288,7 @@
     <script src="../assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
     <script src="../assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
     <!-- Argon JS -->
-    <script src="../assets/js/argon.js?v=1.2.0"></script>
+    <script src="../assets/js/argon.js?v=1.2.0"></script>*@
 </body>
 
 </html>
