--- a/Nithin2003/Views/Users/Index.cshtml
+++ b/Nithin2003/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyUser>
+﻿@*@model IEnumerable<MyUser>
 @{
     ViewData["Title"] = "Index";
 }
@@ -72,3 +72,4 @@
 </style>
 
 
+*@
