--- a/Nithin2003/Views/Dashboard/MoneyRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/MoneyRequest.cshtml
@@ -51,9 +51,10 @@
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                                            <span class="input-group-text"><i class="ni ni-money-coins"></i></span>
                                         </div>
-                                        <input class="form-control"  placeholder="Enter Amount " type="number">
+
+                                        <input class="form-control" asp-for="@Model.LoanAmount" placeholder="Enter Amount " type="number">
                                         
 
                                     </div>
