--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -60,6 +60,15 @@
                                 <span class="nav-link-text">My Dashboard</span>
                             </a>
                         </li>
+                        @if (Context.Session.GetString("Admin") == "True")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="DashBoard" asp-action="LoanAmountRequest">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Loan Requests</span>
+                                </a>
+                            </li>
+                        }
 
                         <li class="nav-item">
                             <a class="nav-link">
@@ -86,9 +95,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Dashboard" asp-action="LoanMoneyRequest">
+                            <a class="nav-link" >
                                 <i class="ni ni-key-25 text-info"></i>
-                                <span class="nav-link-text">Money Request</span>
+                                <span class="nav-link-text">LogIn</span>
                             </a>
                         </li>
                         <li class="nav-item">
