--- a/Nithin2003/Views/Dashboard/MoneyRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/MoneyRequest.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyMoneyRequest
+﻿@model MyLoanRequest
 @{
     ViewData["Title"] = "MoneyRequest";
     Layout = "~/Views/Shared/_Dashboard.cshtml";
@@ -48,6 +48,18 @@
                                 <small> Request Money</small>
                             </div>
                             <form action="/Dashboard/MoneyRequest" method="post">
+
+                                <div class="form-group mb-3">
+                                    <div class="input-group input-group-merge input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i></i></span>
+                                        </div>
+
+                                        <input class="form-control" asp-for="@Model.UserComment" placeholder="Write Your Comment" type="text">
+
+
+                                    </div>
+                                </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
