--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -55,7 +55,7 @@
                     <!-- Nav items -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
+                            <a class="nav-link active" asp-controller="Dashboard" asp-action="Index">
                                 <i class="ni ni-tv-2 text-primary"></i>
                                 <span class="nav-link-text">My Dashboard</span>
                             </a>
@@ -95,7 +95,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" >
+                            <a class="nav-link">
                                 <i class="ni ni-key-25 text-info"></i>
                                 <span class="nav-link-text">LogIn</span>
                             </a>
@@ -313,24 +313,17 @@
             <footer class="footer pt-0">
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
-                        <div class="copyright text-center  text-lg-left  text-muted">
-                            &copy; 2020 <a href="" class="font-weight-bold ml-1" target="_blank">Nithin</a>
-                        </div>
+                        @*<div class="copyright text-center  text-lg-left  text-muted">
+                        &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
+                        </div>*@
                     </div>
                     <div class="col-lg-6">
                         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                            <li class="nav-item">
-                                <a href="" class="nav-link" target="_blank">Nithin</a>
-                                @*</li>
-                                <li class="nav-item">
-                                <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
-                                </li>
-                                <li class="nav-item">
-                                <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
-                                </li>*@
+
+                            <li>
+                                <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                            </li>
+
                         </ul>
                     </div>
                 </div>
