--- a/Nithin2003/Views/DashBoard/TransferMoney.cshtml
+++ b/Nithin2003/Views/DashBoard/TransferMoney.cshtml
@@ -97,4 +97,94 @@
             </div>
         </div>
     </div>
+    @*<!DOCTYPE html>
+            <html lang="en">
+
+            <head>
+               
+                <meta charset="UTF-8" />
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+                <style>
+                    .box {
+                        background-color: black;
+                        height: 100vh;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+
+                        .box a {
+                            padding: 15px;
+                            background-color: #fff;
+                            border-radius: 3px;
+                            text-decoration: none;
+                        }
+
+                    .modal {
+                        position: fixed;
+                        inset: 0;
+                        background: rgba(254, 126, 126, 0.7);
+                        display: none;
+                        align-items: center;
+                        justify-content: center;
+                    }
+
+                    .content {
+                        position: relative;
+                        background: white;
+                        padding: 1em 2em;
+                        border-radius: 4px;
+                    }
+
+                    .modal:target {
+                        display: flex;
+                    }
+                </style>
+            </head>
+
+            <body>
+                <div class="box">
+                    <a href="#popup-box ">Click to Open Popup Box!</a>
+                </div>
+                
+                <div id="popup-box" class="modal">
+                    <div class="content">
+                        <h1 style="color: green"></h1>
+                        
+                        <p>Never Give Up!</p>
+                        <a href="#" style="
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
+                        color: #fe0606;
+                        font-size: 30px;
+                        text-decoration: none;
+                        ">&times;</a>
+                    </div>
+                </div>
+                
+            </body>
+
+        </html>*@
+
+<footer class="footer pt-0">
+    <div class="row align-items-center justify-content-lg-between">
+        <div class="col-lg-6">
+            @*<div class="copyright text-center  text-lg-left  text-muted">
+            &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
+            </div>*@
+        </div>
+        <div class="col-lg-6">
+            <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+
+                <li>
+                    <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</footer>
+
+
    
