--- a/Nithin2003/Views/Shared/_Form.cshtml
+++ b/Nithin2003/Views/Shared/_Form.cshtml
@@ -135,13 +135,16 @@
             <div class="row align-items-center justify-content-xl-between">
                 <div class="col-xl-6">
                     <div class="copyright text-center text-xl-left text-muted">
-                        2024 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Nithin</a>
+                         <a asp-controller="Home" asp-action="Index" class="font-weight-bold ml-1" >Nithin</a>
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <ul class="nav nav-footer justify-content-center justify-content-xl-end">
                         <li class="nav-item">
-                            <a href=" "class="nav-link" target="_blank">Nithin</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index" >Nithin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " target="_blank" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                         </li>
                         @*<li class="nav-item">
                             <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
